# evasion-attack

./: .gitignore  CLAUDE.md  PLAN_EXPERIMENTS.md  PLAN_FINAL.md  README.md  checklist.txt  plan.txt  pyproject.toml  report.txt  requirements.txt  setup_env.sh
.claude/: settings.local.json
papers/: 06244-AAAI24.DingX.md  2602.16494v1.md  Su_RaPA_Enhancing_Transferable_Targeted_Attacks_via_Random_Parameter_Pruning_CVPR_2026_paper.md
results/: e0_sweep.json  e1a_pgd.json  e1b_osfd_baseline.json  e2a_rapa_rpn.json  e2b_rapa_osfd.json  e3a_lowfreq03.json  e3a_lowfreq05.json  e3b_patch32x4.json  e3c_dual.json  e4_stack.json
scripts/: attack_any_image.py  check_env.py  download_coco.sh  eval_clean.py  make_subsets.py  pilot_grad_diversity.py  pilot_pruning_stability.py  run_attack.py  run_mini_attack.py  run_multi_target_attack.py  run_pilot.py  run_sweep.py  smoke_inference.py  smoke_osfd.py  visualize_attack.py
src/assignment_stable_od/: __init__.py  attack.py  matching.py  pruning.py
src/assignment_stable_od.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
