[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "assignment-stable-od"
version = "0.1.0"
description = "Assignment-stability experiments for transferable object detection attacks"
requires-python = ">=3.10,<3.12"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

